Retrieve task one after